Fixed lsb_section spacing

--- a/wp-content/themes/lsb-base-theme/assets/less/lsb-blocks/lsb_section.less
+++ b/wp-content/themes/lsb-base-theme/assets/less/lsb-blocks/lsb_section.less
@@ -1,6 +1,6 @@
 .lsb_section {
   clear: both;
-  margin-top: @line-height-computed*2;
+  margin-top: 5rem;
   position: relative;
 }
 
